# random_code

./: .gitignore  README.md  kivipaperisakset.py
AoC/2015_10/: solution.py
AoC/2015_2/: input.txt  solution.py
AoC/2015_3/: solution.py
AoC/2024_1/: day_2024_1.txt  solution.py
AoC/2024_2/: solution.py
AoC/task7/: binstuff.py
ParallelProgramming/: README.md
ParallelProgramming/correlate/: Makefile  correlate.cc  correlateV1.cc  correlateV2.cc  correlateV3.cc  correlateV4.cc  correlateV5.cc  correlateV6.cu  correlateV7.cu  cp.cc
ParallelProgramming/imseg/: Makefile  imasegV1.cc  imseg.cc  imsegV2.cu  is.cc
ParallelProgramming/mf/: mf.cc  mfV1.cc
ParallelProgramming/sort/: so.cc  sort.cc  sortV1.cc
densest_subgraph/: GraphReader.hs  README.md  dolphins.csv  gephi_conf.gephi  greedy_peel.py  main.py  make_utils.py  meta_data.csv  meta_data_2.csv  pyproject.toml  randomization_util.py  subgraph_conf.gephi
haskstuff/: Todo.hs  collectingNumbers.hs  creatingStrings.hs  haskstuff.cabal  increasingArray.hs  stack.yaml  twoSets.hs  weird.hs
haskstuff/.stack-work/: stack.sqlite3
haskstuff/.stack-work/ghci/f3f3b638/: cabal_macros.h
haskstuff/.stack-work/install/x86_64-linux/55bbc3949eed31e555e29866ed0443716147e3ddf9eeb8125ee58e08eb6eebfa/9.2.8/pkgdb/: haskstuff-0.0.1-4KrCGm9HYhLJJ0O2519xHQ.conf  package.cache
pytools/: .gitignore  README.md  codecat.py  codegrep.py
pytools/codetools/: codecat.py  codegrep.py
tira/: README.md  pyproject.toml
tira/round1/: allwords.py  boxweight.py  cardgame.py  findcode.py  incnum.py  keycode.py  samesum.py  (+2 more)
(+29 files in other folders)
