name: haskstuff
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  build-depends:  Cabal
                , array
				, base
				, binary
				, bytestring
				, containers
				, deepseq
				, directory
				, exceptions
				, filepath
				, ghc
				, ghc-boot
				, ghc-boot-th
				, ghc-compact
				, ghc-heap
				, ghc-prim
				, ghci
				, haskeline
				, hpc
				, integer-gmp
				, libiserv
				, mtl
				, parsec
				, pretty
				, process
				, rts
				, stm
				, template-haskell
				, terminfo
				, text
				, time
				, transformers
				, unix
				, xhtml
  default-language: Haskell2010
